--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="hu">
-
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -9,7 +8,6 @@
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" type="module"></script>
 </head>
-
 <body>
     <main>
         <h1>JavaScript gyakorló feladatok</h1>
@@ -85,7 +83,6 @@
                     <a
                         href="https://www.w3schools.com/jsref/met_document_getelementsbyclassname.asp">getElementsByClassName</a>
                 </li>
-
                 <li>Elem tartalmába írás: <span>ELEM.innerHTML </span></li>
             </ul>
 
@@ -117,7 +114,6 @@
                     <span> (alt+gr+7) `szöveg ${valtozonev} szöveg`</span>
                 </li>
             </ul>
-
             <div class="lista"></div>
         </section>
         <section>
@@ -158,7 +154,6 @@
                         href="https://www.w3schools.com/jsref/dom_obj_event.asp">HTML DOM events</a>
                 </li>
             </ul>
-
             <div class="kattintasutan"></div>
         </section>
         <section>
@@ -216,10 +211,6 @@
                 <li>Az elemeket formázhatod előre elkészített css osztályokkal, ld.: <a href="#ef1">Elemek formázása 1
                         feladat</a> </li>
             </ul>
-
-
-
-
         </section>
         <section>
             <h2>Eseménykezelés 4</h2>
@@ -233,9 +224,7 @@
                 <li>Ha több elemre akarod rátenni ugyanazt az eseménykezelőt, akkor egy ciklussal be kell járnod az
                     elemeket! </li>
                 <li>Az <span>event.target</span> utasítás adja vissza annak a eseményt kiváltó elemet. </li>
-
             </ul>
-
             <div class="tarolo">
                 <div class="elem">1</div>
                 <div class="elem">2</div>
@@ -243,10 +232,8 @@
                 <div class="elem">4</div>
                 <div class="elem">5</div>
             </div>
-            <div class="megjelenito"></div>
-
+            <div class="eredmeny"></div>
         </section>
-
         <section>
             <h2>Saját feladat 1</h2>
             <p>
@@ -256,12 +243,9 @@
             <ul>
                 <li></li>
                 <li></li>
-
             </ul>
-
             <div class="sajatdivem"></div>
         </section>
     </main>
 </body>
-
 </html>
